--- a/Ray.ipynb
+++ b/Ray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4c6d62ec",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3414d122",
    "metadata": {},
    "outputs": [
@@ -20,13 +20,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-21 14:30:07,415\tINFO worker.py:1633 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32m127.0.0.1:8265 \u001b[39m\u001b[22m\n"
+      "2023-11-21 14:36:24,434\tINFO worker.py:1633 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32m127.0.0.1:8265 \u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f05f36ea8a44109af83c8ec258732a0",
+       "model_id": "1ac85e4388704db797b7f9da8b4df790",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,7 +70,7 @@
        "RayContext(dashboard_url='127.0.0.1:8265', python_version='3.10.11', ray_version='2.7.0', ray_commit='b4bba4717f5ba04ee25580fe8f88eed63ef0c5dc', protocol_version=None)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,27 +84,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a51a22b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'node:__internal_head__': 1.0,\n",
-       " 'CPU': 4.0,\n",
-       " 'memory': 375233742.0,\n",
+       "{'object_store_memory': 241761484.0,\n",
        " 'node:127.0.0.1': 1.0,\n",
-       " 'object_store_memory': 187616870.0}"
+       " 'memory': 483522971.0,\n",
+       " 'CPU': 4.0,\n",
+       " 'node:__internal_head__': 1.0}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ray.cluster_resources()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('YES')"
    ]
   }
  ],
