add EDA, preprocessing notebooks

--- a/notebooks/1. Ingest and Split Data.ipynb
+++ b/notebooks/1. Ingest and Split Data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6432eff8",
+   "id": "9fce05e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3bb13eec",
+   "execution_count": 2,
+   "id": "0d532003",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>created_on</th>\n",
+       "      <th>title</th>\n",
+       "      <th>description</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2020-02-20 06:43:18</td>\n",
+       "      <td>Comparison between YOLO and RCNN on real world...</td>\n",
+       "      <td>Bringing theory to experiment is cool. We can ...</td>\n",
+       "      <td>computer-vision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2020-02-20 06:47:21</td>\n",
+       "      <td>Show, Infer &amp; Tell: Contextual Inference for C...</td>\n",
+       "      <td>The beauty of the work lies in the way it arch...</td>\n",
+       "      <td>computer-vision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2020-02-24 16:24:45</td>\n",
+       "      <td>Awesome Graph Classification</td>\n",
+       "      <td>A collection of important graph embedding, cla...</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2020-02-28 23:55:26</td>\n",
+       "      <td>Awesome Monte Carlo Tree Search</td>\n",
+       "      <td>A curated list of Monte Carlo tree search pape...</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25</td>\n",
+       "      <td>2020-03-07 23:04:31</td>\n",
+       "      <td>AttentionWalk</td>\n",
+       "      <td>A PyTorch Implementation of \"Watch Your Step: ...</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id           created_on                                              title   \n",
+       "0   6  2020-02-20 06:43:18  Comparison between YOLO and RCNN on real world...  \\\n",
+       "1   7  2020-02-20 06:47:21  Show, Infer & Tell: Contextual Inference for C...   \n",
+       "2   9  2020-02-24 16:24:45                       Awesome Graph Classification   \n",
+       "3  15  2020-02-28 23:55:26                    Awesome Monte Carlo Tree Search   \n",
+       "4  25  2020-03-07 23:04:31                                      AttentionWalk   \n",
+       "\n",
+       "                                         description              tag  \n",
+       "0  Bringing theory to experiment is cool. We can ...  computer-vision  \n",
+       "1  The beauty of the work lies in the way it arch...  computer-vision  \n",
+       "2  A collection of important graph embedding, cla...            other  \n",
+       "3  A curated list of Monte Carlo tree search pape...            other  \n",
+       "4  A PyTorch Implementation of \"Watch Your Step: ...            other  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Data ingestion\n",
+    "DATASET_LOC = \"https://raw.githubusercontent.com/GokuMohandas/Made-With-ML/main/datasets/dataset.csv\"\n",
+    "df = pd.read_csv(DATASET_LOC)\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "13739d44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 764 entries, 0 to 763\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   id           764 non-null    int64 \n",
+      " 1   created_on   764 non-null    object\n",
+      " 2   title        764 non-null    object\n",
+      " 3   description  764 non-null    object\n",
+      " 4   tag          764 non-null    object\n",
+      "dtypes: int64(1), object(4)\n",
+      "memory usage: 30.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "81f50c39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tag\n",
+       "natural-language-processing    310\n",
+       "computer-vision                285\n",
+       "other                          106\n",
+       "mlops                           63\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get value counts\n",
+    "df.tag.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f09afa25",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# split dataset into training and validation (using stratification to keep distributions intact)\n",
+    "\n",
+    "TEST_SIZE = 0.2\n",
+    "train_df, val_df = train_test_split(df, stratify=df.tag, test_size=TEST_SIZE, random_state=1234)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "47607704",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tag\n",
+       "natural-language-processing    248\n",
+       "computer-vision                228\n",
+       "other                           85\n",
+       "mlops                           50\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check value counts on new training set\n",
+    "\n",
+    "train_df.tag.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30fb67a9",
+   "metadata": {},
+   "source": [
+    "$\\alpha * N_{test} = N_{train}$ \n",
+    "\n",
+    "$N_{train} = 1 - N_{test}$\n",
+    "\n",
+    "$\\alpha = \\frac{N_{train}}{N_{test}} = \\frac{ 1 - N_{test}}{N_{test}}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "83fc2193",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tag\n",
+       "natural-language-processing    248\n",
+       "computer-vision                228\n",
+       "other                           84\n",
+       "mlops                           52\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Validation (adjusted) value counts, to make sure distribution is roughly the same\n",
+    "val_df.tag.value_counts() * int((1-TEST_SIZE) / TEST_SIZE)"
+   ]
   }
  ],
  "metadata": {
